[package]
name = "quickpg"
version = "0.1.0"
edition = "2021"

[dependencies]
async-recursion = "1.0.2"
byte-unit = "1.0.4"
portpicker = "0.1.1"
tokio-postgres = "0.7.7"
rand = "0.8.5"
regex = "1.7.1"
rocket = { version = "0.5.0-rc.2", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.91"
whoami = "1.3.0"
